compilateurDeca/src/test/deca/context/valid/sans_objet/control/if.deca
// Description:
//    Sans-Objet
//    structures de base
//  
//
// Resultats:
//    compilation bonne
//        
// 
// Historique:
//    cree le 06/01/2026

{
    int x = 1;

    if(x < 10){
        x = x + 1;
    } 

    
}