compilateurDeca/src/test/deca/context/invalid/sans_objet/comparaison/float_egal_null.deca
// Description:
//    Test de contexte : comparaison type incompatible.
//
// Resultats:
//    Erreur contextuelle : Comparaison invalide entre float et null.
//
// Historique:
//    cree le 13/01/2026

{
    if (1.1 == null) {}
}